istio/service_entry_oneagent.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dynatrace-oneagent-hostnames
spec:
  hosts:
  - dtmanaged.dynatrace.training/e/869f18e3-f957-4c07-b72a-dfcdb3de4875
  - activegate.dtmanaged.dynatrace.training:443
  - 10.178.4.154:443
  - 10.178.4.85:443
  - 10.178.4.206:443
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: HTTPS
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dynatrace-oneagent-hostnames
spec:
  hosts:
  - dtmanaged.dynatrace.training/e/869f18e3-f957-4c07-b72a-dfcdb3de4875
  - activegate.dtmanaged.dynatrace.training:443
  - 10.178.4.154:443
  - 10.178.4.85:443
  - 10.178.4.206:443
  tls:
  - match:
    - port: 443
      sni_hosts:
      - dtmanaged.dynatrace.training/e/869f18e3-f957-4c07-b72a-dfcdb3de4875
    route:
    - destination:
        host: dtmanaged.dynatrace.training/e/869f18e3-f957-4c07-b72a-dfcdb3de4875
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - activegate.dtmanaged.dynatrace.training:443
    route:
    - destination:
        host: activegate.dtmanaged.dynatrace.training:443
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - 10.178.4.154:443
    route:
    - destination:
        host: 10.178.4.154:443
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - 10.178.4.85:443
    route:
    - destination:
        host: 10.178.4.85:443
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - 10.178.4.206:443
    route:
    - destination:
        host: 10.178.4.206:443
        port:
          number: 443
          name: HTTPS
